# maggie_navigation

./: AUTHORS.md  README.md
maggie_create_map/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_create_map/config/: maggie_mapping.rviz
maggie_create_map/launch/: maggie_mapping.launch  save_map.launch
maggie_navigation/: AUTHORS.md  README.md  package.xml
maggie_navigation_config/: AUTHORS.md  CMakeLists.txt  package.xml
maggie_navigation_config/config/: base_local_planner_params.yaml  costmap_common_params.yaml  initial_pose.yaml  initialpose.yaml  local_costmap_params.yaml  roboticslab_complete_clean_initialpose.yaml
maggie_navigation_config/launch/: amcl.launch  initial_pose.launch  initialpose.launch  move_base.launch  navigation_recovery.launch  navigation_stage_recovery.launch
maggie_navigation_config/launch/laser/: hokuyo.launch  sick.launch
maggie_navigation_config/launch/mapping/: How_to_map.txt  README.md  maggie_mapping.launch  mapping_default2.launch
maggie_navigation_config/launch/real/: navigation.launch  navigation_real.launch
maggie_navigation_config/launch/simulation/: navigation_simulation.launch  navigation_stage.launch
maggie_navigation_config/src/: CMakeLists.txt  initial_status_sender.py  initialpose_sender.py  laser_max_range_filter.cpp
maggie_teleop/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_teleop/launch/: teleop_joy.launch  teleop_keyboard.launch
maggie_teleop/src/: CMakeLists.txt  teleop_joy.cpp  teleop_joy.h  teleop_joy_main.cpp  teleop_keyboard.cpp
nav/: README.md  package.xml
nav/config/: base_local_planner_params.yaml
nav/launch/: amcl.launch  initial_pose.launch
nav/launch/laser/: hokuyo.launch  sick.launch
nav/launch/real/: navigation.launch  navigation_real.launch
nav/launch/simulation/: navigation_simulation.launch  navigation_stage.launch
navigation/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
navigation/launch/: initial_pose.launch  teleop_joy.launch
navigation/src/: CMakeLists.txt
teleop/: README.md
uc3m_maps/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
uc3m_maps/config/: locations_roboticslab.yaml  maggie_mapping.rviz  roboticslab_locations_parsed.yaml
uc3m_maps/maps/: roboticslab_complete.yaml  roboticslab_complete_clean_doors_closed.yaml
