<?xml version="1.0"?>
<package format="2">
    <name>maggie_create_map</name>
    <version>0.0.0</version>
    <description>
        create map for Social Robot Maggie.
    </description>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="raul.perula@uc3m.es">Raul Perula-Martinez</author>
    <author email="jocastil@ing.uc3m.es">Jose Carlos Castillo Montoya</author>


    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="raul.perula@uc3m.es">Raul Perula-Martinez</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LASRL-UC3M V.1.0</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">http://wiki.ros.org/maggie_create_map</url>
    <url type="bugtracker">https://github.com/UC3MSocialRobots/maggie_navigation/issues</url>
    <url type="repository">https://github.com/UC3MSocialRobots/maggie_navigation.git</url>


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS packages dependencies -->
    <exec_depend>gmapping</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>maggie_teleop</exec_depend>
    <exec_depend>maggie_base</exec_depend>
    <exec_depend>maggie_bringup</exec_depend>
    <exec_depend>maggie_navigation_config</exec_depend>
</package>
