<?xml version="1.0"?>
<package format="2">
    <name>maggie_navigation_config</name>
    <version>0.0.0</version>
    <description>
        navigation config files for Social Robot Maggie.
    </description>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="raul.perula@uc3m.es">Raul Perula-Martinez</author>
    <author email="jocastil@ing.uc3m.es">Jose Carlos Castillo Montoya</author>


    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="raul.perula@uc3m.es">Raul Perula-Martinez</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LASRL-UC3M V.1.0</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">http://wiki.ros.org/maggie_navigation_config</url>
    <url type="bugtracker">https://github.com/UC3MSocialRobots/maggie_navigation/issues</url>
    <url type="repository">https://github.com/UC3MSocialRobots/maggie_navigation.git</url>


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS packages dependencies -->
    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
    <depend>move_base</depend>
    <depend>angles</depend>
    <depend>amcl</depend>
    <depend>stage</depend>
    <depend>gmapping</depend>
    <exec_depend>sicktoolbox_wrapper</exec_depend>
    <exec_depend>hokuyo_node</exec_depend>
    
    <!-- Social Robots packages dependencies -->
    <exec_depend>uc3m_maps</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <cpp cflags="-I${prefix} -I${prefix}/build -Wall" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib" />
    </export>
</package>
